--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ font-size: 16px;
 border-collapse: collapse;
 text-align: center;
 width: 1297px;
+border-color: rgba(111, 78, 55);
 background: rgba(255, 255, 255, 0.8);
 }
 td {
