--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,34 @@
 {% block content %}
 <br>
 <h1>Особенности</h1>
-<table>
-  <tr>
-  <td>Завтрак</td>
-  <td>Кофе с собой</td>
- </tr>
-<tr>
-  <td>Еда на вынос</td>
-  <td>Wi-fi</td>
-</tr>
-<tr>
-  <td>Бизнес ланч</td>
-  <td>Онлайн заказ</td>
-</tr>
+<table class="table">
+  <thead>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Завтрак</td>
+      <td>Кофе с собой</td>
+    </tr>
+    <tr>
+      <td>Еда на вынос</td>
+      <td>Wi-fi</td>
+    </tr>
+    <tr>
+      <td>Бизнес ланч</td>
+      <td>Онлайн заказ</td>
+    </tr>
+  </tbody>
 </table>
 <br>
 <h1>График работы</h1>
-<table>
-  <tr>
-  <td style="border-width: 0">Ежедневно с с 07:00 до 20:00</td>
-  </tr>
+<table class="table">
+  <thead>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Ежедневно с с 07:00 до 20:00</td>
+    </tr>
+  </tbody>
 </table>
 <br>
 <h1>Местоположение</h1>
