--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Меню</h1>
 <h2 style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Напитки</h2>
 <div class="container">
   <div class="row">
