--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,14 @@ h1 {
     padding: 20px;
     font-family: "Felix Titling";
 }
+h3 {
+    color: #ffffff;
+    font-family: "Felix Titling";
+}
+p {
+    color: #ffffff;
+    font-family: "Felix Titling";
+}
 table {
 font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 font-size: 16px;
