--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   </thead>
   <tbody>
     <tr>
-      <td>Ежедневно с с 07:00 до 20:00</td>
+      <td>Ежедневно с 07:00 до 20:00</td>
     </tr>
   </tbody>
 </table>
