--- a/templates/base.html
+++ b/templates/base.html
@@ -17,22 +17,30 @@
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/about_us" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">О нас</a>
         </li>
-        <li class="nav-item">
+          {% if current_user.is_authenticated and current_user.number != '+79274961007' %}
+            <li class="nav-item">
             <a class="nav-link" href="/" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Сделать заказ</a>
-        </li>
-          {% if current_user.is_authenticated %}
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="/orders_history" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">История заказов</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/basket" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Корзина</a>
               </li>
-          {% endif %}
-          {% if current_user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">{{ current_user.name }}</a>
               </li>
+          {% elif current_user.is_authenticated and current_user.number == '+79274961007' %}
+              <li class="nav-item">
+                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Изменить меню</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">{{ current_user.name }}(admin)</a>
+              </li>
           {% else %}
+            <li class="nav-item">
+            <a class="nav-link" href="/" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Сделать заказ</a>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Войти</a>
               </li>
