--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="/orders_history" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">История заказов</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/basket" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Корзина</a>
+                <a class="nav-link" href="/order/{{ current_user.id }}" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Корзина</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">{{ current_user.name }}</a>
