--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,10 +12,10 @@
         <img src="static/img/{{ i[2] }}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] == True %}
-          <a href="#" class="btn btn-primary">Добавить</a>
+          {% if i[3] and current_user.is_authenticated %}
+          <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
           {% else %}
-          <a href="#" class="btn btn-primary" aria-disabled="true">Добавить</a>
+          <a href="#" class="btn btn-primary disabled">Добавить</a>
           {% endif %}
         </div>
       </div>
@@ -38,10 +38,10 @@
         <img src="static/img/{{ i[2] }}" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] == True %}
-          <a href="#" class="btn btn-primary">Добавить</a>
+          {% if i[3] and current_user.is_authenticated %}
+          <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
           {% else %}
-          <a href="#" class="btn btn-primary" aria-disabled="true">Добавить</a>
+          <a href="#" class="btn btn-primary disabled">Добавить</a>
           {% endif %}
         </div>
       </div>
