--- a/templates/basket_meals.html
+++ b/templates/basket_meals.html
@@ -1,4 +1,26 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Сумма заказа: {{ all_price }}</h1>
+{% for i in basket %}
+<br>
+<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+    <div class="col p-4 d-flex flex-column position-static">
+      <h3 class="mb-0">{{ i }}</h3>
+      <p class="card-text mb-auto">Количество: {{ basket[i][0] }}</p>
+      <p class="card-text mb-auto">Цена: {{ basket[i][1] }}</p>
+      <div>
+        <a href="/del/{{ i }}" class="btn btn-warning">
+            Удалить
+        </a>
+    </div>
+    </div>
+</div>
+{% endfor %}
+<br>
+<div>
+   <a href="/order" class="btn btn-warning">
+            Заказать
+        </a>
+</div>
 {% endblock %}
