--- a/templates/change_menu.html
+++ b/templates/change_menu.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Меню</h1>
+<a href="/add" class="btn btn-primary">Добавить</a>
+<br>
 <h2 style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Напитки</h2>
 {% for j in range(len_dr) %}
 <div class="container">
@@ -14,11 +15,7 @@
           <br>
           <br>
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] and current_user.is_authenticated %}
-          <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
-          {% else %}
-          <p>Нет в наличии</p>
-          {% endif %}
+          <a href="/delete_meal/{{ i[-1] }}" class="btn btn-primary">Удалить</a>
           <a style="color: #000000">{{ i[1] }}руб.</a>
         </div>
       </div>
@@ -43,11 +40,7 @@
           <br>
           <br>
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] and current_user.is_authenticated %}
-          <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
-          {% else %}
-          <p>Нет в наличии</p>
-          {% endif %}
+          <a href="/delete_meal/{{ i[-1] }}" class="btn btn-primary">Удалить</a>
           <a style="color: #000000">{{ i[1] }}руб.</a>
         </div>
       </div>
