--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,9 @@
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
-            {{ form.email.label }}<br>
-            {{ form.email(class="form-control", type="email") }}<br>
-            {% for error in form.email.errors %}
+            {{ form.number.label }}<br>
+            {{ form.number(class="form-control") }}<br>
+            {% for error in form.number.errors %}
                 <div class="alert alert-danger" role="alert">
                     {{ error }}
                 </div>
@@ -24,6 +24,6 @@
         </p>
         <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-        <div>{{ message }}</div>
+        <p>{{ message }}</p>
     </form>
 {% endblock %}
