Save (adding, delete meals admin)

--- a/templates/change_menu.html
+++ b/templates/change_menu.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<a href="/add" class="btn btn-primary">Добавить</a>
+<a href="/add_meal" class="btn btn-primary">Добавить</a>
 <br>
 <h2 style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Напитки</h2>
 {% for j in range(len_dr) %}
