--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,14 +10,18 @@
     <div class="col">
       <div class="card" style="width: 18rem; height: 18 rem;">
         <div class="card-body">
+          {% if i[2] %}
           <img src="static/img/{{ i[2] }}" class="card-img-top" alt="..." style="width: 15.8rem; height: 10rem;">
           <br>
+          {% endif %}
           <br>
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] and current_user.is_authenticated %}
+          {% if i[3] and current_user.is_authenticated and current_user.admin == False %}
           <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
-          {% else %}
-          <p>Нет в наличии</p>
+          {% elif not i[3] %}
+          <a href="#" class="btn btn-primary disabled">Нет в наличии...</a>
+          {% elif not current_user.is_authenticated or current_user.admin == True %}
+          <a href="#" class="btn btn-primary disabled">Добавить</a>
           {% endif %}
           <a style="color: #000000">{{ i[1] }}руб.</a>
         </div>
@@ -39,14 +43,18 @@
     <div class="col">
       <div class="card" style="width: 18rem; height: 18rem;">
         <div class="card-body">
+          {% if i[2] %}
           <img src="static/img/{{ i[2] }}" class="card-img-top" alt="..." style="width: 15.8rem; height: 10rem;">
           <br>
+          {% endif %}
           <br>
           <h5 class="card-title">{{ i[0] }}</h5>
-          {% if i[3] and current_user.is_authenticated %}
+          {% if i[3] and current_user.is_authenticated and current_user.admin == False %}
           <a href="/choose/{{ i[-1] }}/{{ current_user.id }}" class="btn btn-primary">Добавить</a>
-          {% else %}
-          <p>Нет в наличии</p>
+          {% elif not i[3] %}
+          <a href="#" class="btn btn-primary disabled">Нет в наличии...</a>
+          {% elif not current_user.is_authenticated or current_user.admin == True %}
+          <a href="#" class="btn btn-primary disabled">Добавить</a>
           {% endif %}
           <a style="color: #000000">{{ i[1] }}руб.</a>
         </div>
