--- a/templates/meal_adding.html
+++ b/templates/meal_adding.html
@@ -1,47 +1,48 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Добавление в меню</h1>
-    <form action="" method="post">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.job.label }}<br>
-            {{ form.job(class="form-control", type="string") }}<br>
-            {% for error in form.job.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.team_leader.label }}<br>
-            {{ form.team_leader(class="form-control", type="integer") }}<br>
-            {% for error in form.team_leader.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.work_hours.label }}<br>
-            {{ form.work_hours(class="form-control", type="integer") }}<br>
-            {% for error in form.work_hours.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.collaborators.label }}<br>
-            {{ form.collaborators(class="form-control", type="string") }}<br>
-            {% for error in form.collaborators.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
-        <p>{{ form.is_finished() }} {{ form.is_finished.label }}</p>
-        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-        <div>{{ message }}</div>
-    </form>
+<h1>Добавление в меню</h1>
+<form action="" method="post" style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
+    {{ form.hidden_tag() }}
+    <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
+        {{ form.name.label }}<br>
+        {{ form.name(class="form-control") }}<br>
+        {% for error in form.name.errors %}
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
+    {% endfor %}
+    </p>
+    <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
+        {{ form.price.label }}<br>
+        {{ form.price(class="form-control") }}<br>
+        {% for error in form.price.errors %}
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
+    {% endfor %}
+    </p>
+    <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
+        {{ form.category.label }}<br>
+        {{ form.category(class="form-control") }}<br>
+        {% for error in form.category.errors %}
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
+    {% endfor %}
+    </p>
+    <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">
+        {{ form.pic.label }}<br>
+        {{ form.pic(class="form-control") }}<br>
+        {% for error in form.pic.errors %}
+    <p class="alert alert-danger" role="alert">
+        {{ error }}
+    </p>
+    {% endfor %}
+    </p>
+    <p style="color: #e3f2fd; font-size: 20px; font-family: Felix Titling;">{{ form.in_stock() }} {{ form.in_stock
+        .label }}</p>
+    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+    <p>{{message}}</p>
+</form>
 {% endblock %}
