--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,10 @@ h3 {
     color: #ffffff;
     font-family: "Felix Titling";
 }
+h6 {
+    padding-top: 10px;
+    color: #000000;
+}
 p {
     color: #ffffff;
     font-family: "Felix Titling";
