--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,14 @@
                 <a class="nav-link" href="/basket" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Корзина</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">{{ current_user.name }}</a>
+                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Выйти из аккаунта</a>
               </li>
           {% elif current_user.is_authenticated and current_user.admin == 1 %}
               <li class="nav-item">
                 <a class="nav-link" href="/change_menu" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Изменить меню</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">{{ current_user.name }}(admin)</a>
+                <a class="nav-link" href="/logout" style="color: #e3f2fd; font-size: 24px; font-family: Felix Titling">Выйти из аккаунта</a>
               </li>
           {% else %}
             <li class="nav-item">
